--- a/HID-Controller/platformio.ini
+++ b/HID-Controller/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:micro]
+[env:retrolitecm5]
 platform = atmelavr
-board = micro
+board = retrolitecm5
 framework = arduino
 lib_deps = 
 	arduino-libraries/Mouse@^1.0.1
 	mheironimus/Joystick@^2.1.1
 	jrowberg/I2Cdevlib-MPU6050@^1.0.0
 	jrowberg/I2Cdevlib-Core@^1.0.1
-;	arduino-libraries/Keyboard@^1.0.4
+	arduino-libraries/Keyboard@^1.0.4
