--- a/rp2040_gamepad/.vscode/settings.json
+++ b/rp2040_gamepad/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
         "time.h": "c",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "ranges": "cpp",
+        "utility": "cpp"
     }
 }
