Use flash to store calibration

--- a/rp2040_gamepad/.vscode/settings.json
+++ b/rp2040_gamepad/.vscode/settings.json
@@ -6,6 +6,7 @@
         "string_view": "cpp",
         "initializer_list": "cpp",
         "ranges": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "*.tcc": "cpp"
     }
 }
