--- a/rp2040_gamepad/.vscode/settings.json
+++ b/rp2040_gamepad/.vscode/settings.json
@@ -7,6 +7,7 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "utility": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "thread": "c"
     }
 }
