Fix VBAT limit handling

--- a/ATTiny84_power/platformio.ini
+++ b/ATTiny84_power/platformio.ini
@@ -14,13 +14,14 @@ board = attiny84
 framework = arduino
 upload_protocol = custom
 upload_speed = 19200
-upload_flags =
-    -C
-    ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
-    ${platformio.packages_dir}/tool-avrdude/avrdude.conf
-    -pattiny84
-    -P$UPLOAD_PORT
-    -b$UPLOAD_SPEED
-    -carduino
+upload_flags = 
+	-C
+	${platformio.packages_dir}/tool-avrdude/avrdude.conf
+	-pattiny84
+	-P$UPLOAD_PORT
+	-b$UPLOAD_SPEED
+	-carduino
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
-lib_deps = felias-fogg/SoftI2CMaster@^2.1.3
+lib_deps = 
+	felias-fogg/SoftI2CMaster@^2.1.3
+	featherfly/SoftwareSerial@^1.0
